--- a/producthardware.html
+++ b/producthardware.html
@@ -5,7 +5,23 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>Product</title>
 </head>
+	<header>
+	<div id="mySidenav" class="sidenav">
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		<a href="index.html">Home</a>
+		<a href="shop.html">Shop</a>
+		<a href="hardware.html">Hardware</a>
+		<a href="software.html">Software</a>
+		<a href="repair.html">Repair</a>
+		<a href="info.html">Info</a>
+	</div>
+	<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+</header>
 <body>
-	
+
+<div class="center">
+	<img src="img/products/pc1.png" id="imgproducthardware">
+</div>
+	<script src="script/script.js"></script>
 </body>
 </html>
