--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>Shop</title>
 </head>
-<header>
+
+<body>
+	<header>
 	<div id="mySidenav" class="sidenav">
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		<a href="index.html">Home</a>
@@ -17,91 +19,82 @@
 	</div>
 	<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 </header>
-<body>
 
 	<div class="center">
 		<div class="items">
 			<div class="row1">
-				<p><a href="product.html"> <img src="img/products/pc1.png" id="imgshop"></a>
+				<p><a href="producthardware.html"> <img src="img/products/pc1.png" id="imgshop"></a>
         		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 299,99</span></p>
 			</div>
 
 			<div class="row2">
-				<p><a href="product.html"> <img src="img/products/pc2.png" id="imgshop"></a>
+				<p><a href="producthardware.html"> <img src="img/products/pc2.png" id="imgshop"></a>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 349,99</span></p>
 			</div>
 
 			<div class="row3">
-				<p><a href="product.html"> <img src="img/products/pc3.png" id="imgshop"></a>
+				<p><a href="producthardware.html"> <img src="img/products/pc3.png" id="imgshop"></a>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 475,-</span></p>
     		</div>
 
         <div class="row1">
-				<p><a href="product.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
+				<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
         		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 109,95</span></p>
 			</div>
 
 			<div class="row2">
-				<p><a href="product.html"> <img src="img/products/norton.png" id="imgshop"></a>
+				<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 109,95</span></p>
 			</div>
 
 			<div class="row3">
-				<p><a href="product.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
+				<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 109,95</span></p>
 			</div>
 
 			<div class="row1">
-				<p><a href="product.html"> <img src="img/products/pc1.png" id="imgshop"></a>
+				<p><a href="producthardware.html"> <img src="img/products/pc1.png" id="imgshop"></a>
         		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 299,99</span></p>
 			</div>
 
 			<div class="row2">
-				<p><a href="product.html"> <img src="img/products/pc2.png" id="imgshop"></a>
+				<p><a href="producthardware.html"> <img src="img/products/pc2.png" id="imgshop"></a>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 349,99</span></p>
 			</div>
 
 			<div class="row3">
-				<p><a href="product.html"> <img src="img/products/pc3.png" id="imgshop"></a>
+				<p><a href="producthardware.html"> <img src="img/products/pc3.png" id="imgshop"></a>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 475,-</span></p>
     		</div>
 
         <div class="row1">
-				<p><a href="product.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
+				<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
         		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 109,95</span></p>
 			</div>
 
 			<div class="row2">
-				<p><a href="product.html"> <img src="img/products/norton.png" id="imgshop"></a>
+				<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 109,95</span></p>
 			</div>
 
 			<div class="row3">
-				<p><a href="product.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
+				<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
         <p> <span> € 109,95</span></p>
 			</div>
 	</div>
-	<script>	
-		function openNav() {
-		  document.getElementById("mySidenav").style.width = "250px";
-		}
-
-		function closeNav() {
-		  document.getElementById("mySidenav").style.width = "0";
-		}
-</script>
+<script src="script/script.js"></script>
 </body>
 
 </html>
