--- a/producthardware.html
+++ b/producthardware.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>Product</title>
 </head>
-	<header>
+<body>
+		<header>
 	<div id="mySidenav" class="sidenav">
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		<a href="index.html">Home</a>
@@ -17,22 +18,22 @@
 	</div>
 	<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 </header>
-<body>
-
-<div class="center">
-	<div class="producthardware">
-		<h1>MSI Infinite A 9SE-831MYS</h1>
-		<img src="img/products/pc1.png" id="imgproducthardware">
-		<p>De MSI Infinite A 9SE-831MYS heeft een NVIDIA GeForce RTX 2080 videokaart en overklokbare Intel Core i7 processor, waarmee je de nieuwste games en die van de toekomst op de allerhoogste instellingen speelt. Games zijn in een mum van tijd opgestart, want de 512 GB SSD van de pc laadt ze in enkele seconden. Ook heb je 2 TB aan harde schijfruimte op de pc. Daarmee heb je genoeg ruimte voor al jouw beeldmateriaal en games. Via de MSI Dragon Centre software stel je zelf naar eigen wens een kleurpalet in waarin de MSI oplicht in het donker. Zo zie je alle kleuren van de regenboog in het donker.</p>
-		<ul>
-			<li>League of Legends: ultra instellingen (gem. 767 fps)</li>
-			<li>Overwatch: ultra instellingen (gem. 216 fps)</li>
-			<li>Fortnite: ultra instellingen (gem. 139 fps)</li>
-			<li>PUBG: ultra instellingen (gem. 113 fps)</li>
-			<li>BF5: ultra instellingen (gem. 148 fps)</li>
-		</ul>
+<main>
+	<div class="center">
+		<div class="producthardware">
+			<h1>MSI Infinite A 9SE-831MYS</h1>
+			<img src="img/products/pc1.png" id="imgproducthardware">
+			<p>De MSI Infinite A 9SE-831MYS heeft een NVIDIA GeForce RTX 2080 videokaart en overklokbare Intel Core i7 processor, waarmee je de nieuwste games en die van de toekomst op de allerhoogste instellingen speelt. Games zijn in een mum van tijd opgestart, want de 512 GB SSD van de pc laadt ze in enkele seconden. Ook heb je 2 TB aan harde schijfruimte op de pc. Daarmee heb je genoeg ruimte voor al jouw beeldmateriaal en games. Via de MSI Dragon Centre software stel je zelf naar eigen wens een kleurpalet in waarin de MSI oplicht in het donker. Zo zie je alle kleuren van de regenboog in het donker.</p>
+			<ul>
+				<li>League of Legends: ultra instellingen (gem. 767 fps)</li>
+				<li>Overwatch: ultra instellingen (gem. 216 fps)</li>
+				<li>Fortnite: ultra instellingen (gem. 139 fps)</li>
+				<li>PUBG: ultra instellingen (gem. 113 fps)</li>
+				<li>BF5: ultra instellingen (gem. 148 fps)</li>
+			</ul>
+		</div>
 	</div>
-</div>
+</main>
 	<script src="script/script.js"></script>
 </body>
 </html>
