--- a/shop.html
+++ b/shop.html
@@ -19,81 +19,82 @@
 	</div>
 	<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 </header>
+	<main>
+		<div class="center">
+			<div class="items">
+				<div class="row1">
+					<p><a href="producthardware.html"> <img src="img/products/pc1.png" id="imgshop"></a>
+	        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 299,99</span></p>
+				</div>
 
-	<div class="center">
-		<div class="items">
-			<div class="row1">
-				<p><a href="producthardware.html"> <img src="img/products/pc1.png" id="imgshop"></a>
-        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 299,99</span></p>
-			</div>
+				<div class="row2">
+					<p><a href="producthardware.html"> <img src="img/products/pc2.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 349,99</span></p>
+				</div>
 
-			<div class="row2">
-				<p><a href="producthardware.html"> <img src="img/products/pc2.png" id="imgshop"></a>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 349,99</span></p>
-			</div>
+				<div class="row3">
+					<p><a href="producthardware.html"> <img src="img/products/pc3.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 475,-</span></p>
+	    		</div>
 
-			<div class="row3">
-				<p><a href="producthardware.html"> <img src="img/products/pc3.png" id="imgshop"></a>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 475,-</span></p>
-    		</div>
+	        <div class="row1">
+					<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
+	        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 109,95</span></p>
+				</div>
 
-        <div class="row1">
-				<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
-        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 109,95</span></p>
-			</div>
+				<div class="row2">
+					<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 109,95</span></p>
+				</div>
 
-			<div class="row2">
-				<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 109,95</span></p>
-			</div>
+				<div class="row3">
+					<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 109,95</span></p>
+				</div>
 
-			<div class="row3">
-				<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 109,95</span></p>
-			</div>
+				<div class="row1">
+					<p><a href="producthardware.html"> <img src="img/products/pc1.png" id="imgshop"></a>
+	        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 299,99</span></p>
+				</div>
 
-			<div class="row1">
-				<p><a href="producthardware.html"> <img src="img/products/pc1.png" id="imgshop"></a>
-        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 299,99</span></p>
-			</div>
+				<div class="row2">
+					<p><a href="producthardware.html"> <img src="img/products/pc2.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 349,99</span></p>
+				</div>
 
-			<div class="row2">
-				<p><a href="producthardware.html"> <img src="img/products/pc2.png" id="imgshop"></a>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 349,99</span></p>
-			</div>
+				<div class="row3">
+					<p><a href="producthardware.html"> <img src="img/products/pc3.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 475,-</span></p>
+	    		</div>
 
-			<div class="row3">
-				<p><a href="producthardware.html"> <img src="img/products/pc3.png" id="imgshop"></a>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 475,-</span></p>
-    		</div>
+	        <div class="row1">
+					<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
+	        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 109,95</span></p>
+				</div>
 
-        <div class="row1">
-				<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
-        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 109,95</span></p>
-			</div>
+				<div class="row2">
+					<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 109,95</span></p>
+				</div>
 
-			<div class="row2">
-				<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 109,95</span></p>
-			</div>
-
-			<div class="row3">
-				<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-        <p> <span> € 109,95</span></p>
-			</div>
-	</div>
+				<div class="row3">
+					<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 109,95</span></p>
+				</div>
+		</div>
+	</main>
 <script src="script/script.js"></script>
 </body>
 
