--- a/hardware.html
+++ b/hardware.html
@@ -5,7 +5,80 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>Hardware</title>
 </head>
+
 <body>
-	
+	<header>
+	<div id="mySidenav" class="sidenav">
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		<a href="index.html">Home</a>
+		<a href="shop.html">Shop</a>
+		<a href="hardware.html">Hardware</a>
+		<a href="software.html">Software</a>
+		<a href="repair.html">Repair</a>
+		<a href="info.html">Info</a>
+	</div>
+	<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+</header>
+	<main>
+		<div class="center">
+			<div class="items">
+				<div class="row1">
+					<p><a href="producthardware.html"> <img src="img/products/pc1.png" id="imgshop"></a>
+	        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 299,99</span></p>
+				</div>
+
+				<div class="row2">
+					<p><a href="producthardware.html"> <img src="img/products/pc2.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 349,99</span></p>
+				</div>
+
+				<div class="row3">
+					<p><a href="producthardware.html"> <img src="img/products/pc3.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 475,-</span></p>
+	    		</div>
+
+	    			<div class="row1">
+					<p><a href="producthardware.html"> <img src="img/products/pc1.png" id="imgshop"></a>
+	        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 299,99</span></p>
+				</div>
+
+				<div class="row2">
+					<p><a href="producthardware.html"> <img src="img/products/pc2.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 349,99</span></p>
+				</div>
+
+				<div class="row3">
+					<p><a href="producthardware.html"> <img src="img/products/pc3.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 475,-</span></p>
+	    		</div>
+
+	    			<div class="row1">
+					<p><a href="producthardware.html"> <img src="img/products/pc1.png" id="imgshop"></a>
+	        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 299,99</span></p>
+				</div>
+
+				<div class="row2">
+					<p><a href="producthardware.html"> <img src="img/products/pc2.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 349,99</span></p>
+				</div>
+
+				<div class="row3">
+					<p><a href="producthardware.html"> <img src="img/products/pc3.png" id="imgshop"></a>
+	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        <p> <span> € 475,-</span></p>
+	    		</div>
+
+		</div>
+	</main>
+<script src="script/script.js"></script>
 </body>
+
 </html>
