--- a/producthardware.html
+++ b/producthardware.html
@@ -31,6 +31,7 @@
 				<li>PUBG: ultra instellingen (gem. 113 fps)</li>
 				<li>BF5: ultra instellingen (gem. 148 fps)</li>
 			</ul>
+			<p id="pricehardware">€299,99</p>
 		</div>
 	</div>
 </main>
