--- a/productsoftware.html
+++ b/productsoftware.html
@@ -24,6 +24,7 @@
 			<h1>Office 365</h1>
 			<img src="img/products/office365.jpg" id="imgproductsoftware">
 			<p>Office 365 is een abonnementsservice in de cloud die de beste hulpprogramma’s samenbrengt voor de manier waarop mensen tegenwoordig werken. Door best-in-class apps zoals Excel en Outlook te combineren met krachtige cloudservices zoals OneDrive en Microsoft Teams, kan iedereen op elk apparaat van alles maken en delen dankzij Office 365.</p>
+			<p id="pricesoftware">€109,95</p>
 		</div>
 	</div>
 </main>
