--- a/shop.html
+++ b/shop.html
@@ -21,6 +21,7 @@
 </header>
 	<main>
 		<div class="center">
+			<h1 id="title">Shop</h1>
 			<div class="items">
 				<div class="row1">
 					<p><a href="producthardware.html"> <img src="img/products/pc1.png" id="imgshop"></a>
