--- a/software.html
+++ b/software.html
@@ -21,6 +21,7 @@
 </header>
 	<main>
 		<div class="center">
+			<h1 id="title">Software</h1>
 			<div class="items">
 	        <div class="row1">
 					<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
