--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>PC4U</title>
 	<link rel="stylesheet" href="css/style.css">
+	<title>Product</title>
 </head>
 <body>
-	
+		<header>
+	<div id="mySidenav" class="sidenav">
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+		<a href="index.html">Home</a>
+		<a href="shop.html">Shop</a>
+		<a href="hardware.html">Hardware</a>
+		<a href="software.html">Software</a>
+		<a href="repair.html">Repair</a>
+		<a href="info.html">Info</a>
+	</div>
+	<a href="index.html"><img src="img/logo1.png" alt="Logo PC4U" id="logopc4u"></a>
+	<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+</header>
+<main>
+	<div class="center">
+		<h1>PC4U</h1>
+	</div>
+</main>
+	<script src="script/script.js"></script>
 </body>
 </html>
