--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
 </header>
 <main>
 	<div class="center">
-		<h1>PC4U</h1>
+		<h1 id="title">PC4U</h1>
+		<h2 id="slogan">De computer winkel voor u!</h2>
+		<div class="slideshow">
+			<img src="img/slide/slide1.png" alt="slideshow 1">
+			<img src="img/slide/slide2.png" alt="slideshow 2">
+			<img src="img/slide/slide3.png" alt="slideshow 3">
+			<img src="img/slide/slide4.png" alt="slideshow 4">
+			<img src="img/slide/slide5.png" alt="slideshow 5">
+		</div>
 	</div>
 </main>
 	<script src="script/script.js"></script>
