--- a/info.html
+++ b/info.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Product</title>
+	<title>Info</title>
 </head>
 <body>
 		<header>
@@ -21,16 +20,6 @@
 </header>
 <main>
 	<div class="center">
-		<h1 id="title">PC4U</h1>
-		<h2 id="slogan">De computer winkel voor u!</h2>
-		<div class="slideshow">
-			<img src="img/slide/slide1.png" alt="slideshow 1">
-			<img src="img/slide/slide2.png" alt="slideshow 2">
-			<img src="img/slide/slide3.png" alt="slideshow 3">
-			<img src="img/slide/slide4.png" alt="slideshow 4">
-			<img src="img/slide/slide5.png" alt="slideshow 5">
-		</div>
-		
 	</div>
 </main>
 	<script src="script/script.js"></script>
