--- a/producthardware.html
+++ b/producthardware.html
@@ -16,7 +16,9 @@
 		<a href="repair.html">Repair</a>
 		<a href="info.html">Info</a>
 	</div>
+	<a href="index.html"><img src="img/logo.png" alt="Logo PC4U" id="logopc4u"></a>
 	<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+
 </header>
 <main>
 	<div class="center">
