--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<img src="img/slide/slide4.png" alt="slideshow 4">
 			<img src="img/slide/slide5.png" alt="slideshow 5">
 		</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero sint aliquam, deserunt porro id, reiciendis nesciunt quas laudantium odio in tempora neque rem perferendis dolor optio. Necessitatibus aperiam, eos magni.</p>
 		
 	</div>
 </main>
