--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Product</title>
+	<title>Home</title>
 </head>
 <body>
 		<header>
@@ -30,8 +30,12 @@
 			<img src="img/slide/slide4.png" alt="slideshow 4">
 			<img src="img/slide/slide5.png" alt="slideshow 5">
 		</div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero sint aliquam, deserunt porro id, reiciendis nesciunt quas laudantium odio in tempora neque rem perferendis dolor optio. Necessitatibus aperiam, eos magni.</p>
+		<h3>Lorem ipsum dolor sit.</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore reprehenderit iure, dolorum illum sequi impedit fugit aut repudiandae minus delectus rem asperiores harum perspiciatis aliquid iste a eveniet, corrupti odit.</p>
 		
+	</div>
+	<div class="footer">
+		<p>&copy;2019 <span id="names">Renzo Fens</span> & <span id="names">Stefano Smit</span> </p>
 	</div>
 </main>
 	<script src="script/script.js"></script>
