--- a/repair.html
+++ b/repair.html
@@ -41,6 +41,9 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, cupiditate odio dignissimos reprehenderit cumque culpa officiis ea nesciunt nobis. Placeat suscipit aliquam quo expedita veritatis.</p>
 		</div>
 	</div>
+		<div class="footer">
+		<p>&copy;2019 <span id="names">Renzo Fens</span> & <span id="names">Stefano Smit</span> </p>
+	</div>
 </main>
 	<script src="script/script.js"></script>
 </body>
