--- a/software.html
+++ b/software.html
@@ -20,64 +20,67 @@
 	<a href="index.html"><img src="img/logo.png" alt="Logo PC4U" id="logopc4u"></a>
 	<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
 </header>
-	<main>
-		<div class="center">
-			<h1 id="title">Software</h1>
-			<div class="items">
+<main>
+	<div class="center">
+		<h1 id="title">Software</h1>
+		<div class="items">
 	        <div class="row1">
-					<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
-	        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+				<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
+	        	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
 	        <p> <span> € 109,95</span></p>
-				</div>
+			</div>
 
-				<div class="row2">
-					<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
-	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-	        <p> <span> € 109,95</span></p>
-				</div>
+			<div class="row2">
+				<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
+		        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+		        <p> <span> € 109,95</span></p>
+			</div>
 
-				<div class="row3">
-					<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
-	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-	        <p> <span> € 109,95</span></p>
-				</div>
-				  <div class="row1">
-					<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
-	        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-	        <p> <span> € 109,95</span></p>
-				</div>
+			<div class="row3">
+				<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
+	        	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        	<p> <span> € 109,95</span></p>
+			</div>
 
-				<div class="row2">
-					<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
-	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-	        <p> <span> € 109,95</span></p>
-				</div>
+			<div class="row1">
+				<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
+	        	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        	<p> <span> € 109,95</span></p>
+			</div>
 
-				<div class="row3">
-					<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
-	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-	        <p> <span> € 109,95</span></p>
-				</div>
-				  <div class="row1">
-					<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
-	        		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-	        <p> <span> € 109,95</span></p>
-				</div>
+			<div class="row2">
+				<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
+	        	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        	<p> <span> € 109,95</span></p>
+			</div>
 
-				<div class="row2">
-					<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
-	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-	        <p> <span> € 109,95</span></p>
-				</div>
+			<div class="row3">
+				<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
+	        	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        	<p> <span> € 109,95</span></p>
+			</div>
+			<div class="row1">
+				<p><a href="productsoftware.html"> <img src="img/products/office365.jpg" id="imgshop"></a>
+	        	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        	<p> <span> € 109,95</span></p>
+			</div>
 
-				<div class="row3">
-					<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
-	        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
-	        <p> <span> € 109,95</span></p>
-				</div>
+			<div class="row2">
+				<p><a href="productsoftware.html"> <img src="img/products/norton.png" id="imgshop"></a>
+	        	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        	<p> <span> € 109,95</span></p>
+			</div>
 
+			<div class="row3">
+				<p><a href="productsoftware.html"> <img src="img/products/adobe.jpg" id="imgshop"></a>
+	        	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic impedit dignissimos, numquam natus voluptatum harum reprehenderit dolor porro. Architecto eligendi commodi amet, error mollitia distinctio. </p>   
+	        	<p> <span> € 109,95</span></p>
+			</div>
 		</div>
-	</main>
+			<div class="footer">
+		<p>&copy;2019 <span id="names">Renzo Fens</span> & <span id="names">Stefano Smit</span> </p>
+	</div>
+</main>
 <script src="script/script.js"></script>
 </body>
 
