--- a/hardware.html
+++ b/hardware.html
@@ -79,6 +79,9 @@
 	    		</div>
 
 		</div>
+		<div class="footer">
+			<p>&copy;2019 <span id="names">Renzo Fens</span> & <span id="names">Stefano Smit</span> </p>
+		</div>
 	</main>
 <script src="script/script.js"></script>
 </body>
