--- a/info.html
+++ b/info.html
@@ -21,6 +21,9 @@
 <main>
 	<div class="center">
 	</div>
+		<div class="footer">
+		<p>&copy;2019 <span id="names">Renzo Fens</span> & <span id="names">Stefano Smit</span> </p>
+	</div>
 </main>
 	<script src="script/script.js"></script>
 </body>
