--- a/producthardware.html
+++ b/producthardware.html
@@ -36,6 +36,9 @@
 			<p id="pricehardware">€299,99</p>
 		</div>
 	</div>
+		<div class="footer">
+		<p>&copy;2019 <span id="names">Renzo Fens</span> & <span id="names">Stefano Smit</span> </p>
+	</div>
 </main>
 	<script src="script/script.js"></script>
 </body>
