--- a/productsoftware.html
+++ b/productsoftware.html
@@ -28,7 +28,11 @@
 			<p id="pricesoftware">€109,95</p>
 		</div>
 	</div>
+		<div class="footer">
+		<p>&copy;2019 <span id="names">Renzo Fens</span> & <span id="names">Stefano Smit</span> </p>
+	</div>
 </main>
+
 	<script src="script/script.js"></script>
 </body>
 </html>
