--- a/info.html
+++ b/info.html
@@ -20,6 +20,9 @@
 </header>
 <main>
 	<div class="center">
+		<h1 id="title">Informatie</h1>
+		<h2>Over ons</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus nulla qui vel omnis sed pariatur ratione. Tempore veritatis odit sunt modi, cumque repellendus, magni provident corporis neque molestiae sed beatae.</p>
 	</div>
 		<div class="footer">
 		<p>&copy;2019 <span id="names">Renzo Fens</span> & <span id="names">Stefano Smit</span> </p>
