--- a/repair.html
+++ b/repair.html
@@ -30,7 +30,7 @@
 			<li>Lorem ipsum.</li>
 			<li>Lorem ipsum.</li>
 		</ul>
-		<div class="repdescription">
+		<div class="description">
 			<h3>Hoe gaan wij te werk?</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus architecto obcaecati illum quasi dolore unde explicabo neque recusandae esse minima eius iste veritatis officia incidunt, mollitia voluptates maxime error suscipit! Enim aperiam iure, ullam ut qui! Porro voluptatibus velit voluptatem labore modi esse cupiditate praesentium ab delectus vel mollitia, quaerat necessitatibus inventore quos, ea, aliquam excepturi accusantium. Deleniti iure nulla veniam velit aliquid, facere earum nam voluptatem adipisci rem amet optio, in fugit ullam error nemo perspiciatis maxime illum. Repudiandae eos deserunt nostrum voluptatem cumque modi blanditiis quaerat tempore ratione ut. Id, maiores cum, animi asperiores provident deleniti adipisci.</p>
 
