--- a/info.html
+++ b/info.html
@@ -21,8 +21,16 @@
 <main>
 	<div class="center">
 		<h1 id="title">Informatie</h1>
-		<h2>Over ons</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus nulla qui vel omnis sed pariatur ratione. Tempore veritatis odit sunt modi, cumque repellendus, magni provident corporis neque molestiae sed beatae.</p>
+		<div class="description">
+			<h3>Informatie over ons</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus architecto obcaecati illum quasi dolore unde explicabo neque recusandae esse minima eius iste veritatis officia incidunt, mollitia voluptates maxime error suscipit! Enim aperiam iure, ullam ut qui! Porro voluptatibus velit voluptatem labore modi esse cupiditate praesentium ab delectus vel mollitia, quaerat necessitatibus inventore quos, ea, aliquam excepturi accusantium. Deleniti iure nulla veniam velit aliquid, facere earum nam voluptatem adipisci rem amet optio, in fugit ullam error nemo perspiciatis maxime illum. Repudiandae eos deserunt nostrum voluptatem cumque modi blanditiis quaerat tempore ratione ut. Id, maiores cum, animi asperiores provident deleniti adipisci.</p>
+
+			<h3>Waar is ons bedrijf gevestigd?</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi velit tempora veniam odio temporibus quisquam laboriosam, eum illum itaque alias, dolorum accusantium a. Ullam, tempora rerum magni fugit praesentium recusandae tenetur facilis blanditiis fuga veritatis illum atque reiciendis? Possimus delectus, eveniet commodi ipsum perferendis incidunt.</p>
+
+			<h3>Belangrijk om te weten!</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, cupiditate odio dignissimos reprehenderit cumque culpa officiis ea nesciunt nobis. Placeat suscipit aliquam quo expedita veritatis.</p>
+		</div>
 	</div>
 		<div class="footer">
 		<p>&copy;2019 <span id="names">Renzo Fens</span> & <span id="names">Stefano Smit</span> </p>
